# yandex_praktikum_projects

./: README.md
calculator/: CMakeLists.txt  README.md
calculator/src/: calculator.h  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rational.h
game_server/: CMakeLists.txt  README.md
game_server/data/: README.md
game_server/src/: app.cpp  app.h  boost_logger.h  collision_detector.cpp  connection_pool.h  data_keeper.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  program_options.h  request_handler.cpp  request_handler.h  tagged.h  ticker.h  utils.cpp  utils.h
game_server/src/postgres/: postgres.cpp  postgres.h
game_server/static/: README.md
spreadsheet/: CMakeLists.txt  README.md  conanfile.txt
spreadsheet/Formula/: FormulaBaseListener.cpp  FormulaBaseListener.h  FormulaLexer.cpp  FormulaLexer.h  FormulaListener.cpp  FormulaListener.h  FormulaParser.cpp  FormulaParser.h
spreadsheet/src/: FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  main.cpp  sheet.cpp  sheet.h
